--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,10 +5,9 @@
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
 
-
   <%= javascript_include_tag "application" %>
-  <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbo-track': 'reload' %>
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -76,6 +75,13 @@
       </div>
     </div>
   </nav>
+
+  <!-- Only show the image on the home page -->
+  <% if controller_name == 'home' && action_name == 'index' %>
+    <header class="hero-image">
+      <img src="<%= asset_path('banner.jpg') %>" alt="Store Front" style="width: 100%; height: 100%; object-fit: cover;">
+    </header>
+  <% end %>
 
   <div class="container mt-4">
     <%= yield %>
