--- a/app/views/checkouts/new.html.erb
+++ b/app/views/checkouts/new.html.erb
@@ -73,23 +73,23 @@
       </div>
 
       <div class="form-group mb-3">
-        <%= f.label :province %>
-        <%= f.select :province, options_for_select([
-          ["Alberta", "AB"],
-          ["British Columbia", "BC"],
-          ["Manitoba", "MB"],
-          ["New Brunswick", "NB"],
-          ["Newfoundland and Labrador", "NL"],
-          ["Nova Scotia", "NS"],
-          ["Ontario", "ON"],
-          ["Prince Edward Island", "PE"],
-          ["Quebec", "QC"],
-          ["Saskatchewan", "SK"],
-          ["Northwest Territories", "NT"],
-          ["Nunavut", "NU"],
-          ["Yukon", "YT"]
-        ], selected: @order.province), required: true, class: "form-control" %>
-      </div>
+  <%= f.label :province %>
+  <%= f.select :province, options_for_select([
+    ["Alberta", "AB"],
+    ["British Columbia", "BC"],
+    ["Manitoba", "MB"],
+    ["New Brunswick", "NB"],
+    ["Newfoundland and Labrador", "NL"],
+    ["Nova Scotia", "NS"],
+    ["Ontario", "ON"],
+    ["Prince Edward Island", "PE"],
+    ["Quebec", "QC"],
+    ["Saskatchewan", "SK"],
+    ["Northwest Territories", "NT"],
+    ["Nunavut", "NU"],
+    ["Yukon", "YT"]
+  ], @order.province), { prompt: "Select Province" }, { required: true, class: "form-control" } %>
+</div>
 
       <div class="form-group mb-4">
         <%= f.label :payment_method, "Payment Method" %>
